fix: increase z-index

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -40,6 +40,7 @@
     left: 0;
     overflow: hidden;
     font-family: sans-serif;
+    z-index: 99999;
   }
 
   &__content {
